fixed icon spacing + latest build

--- a/public/global.css
+++ b/public/global.css
@@ -6,5 +6,5 @@
 
 * {
 	box-sizing: border-box;
-	font-family: (--font-main);
+	font-family: var(--font-main);
 }
